--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
   <div class="space" style="height: 100px;"></div>
 
-  <!-- Experience -->
+  <!-- Experience --><!--
   <section class="experience d-flex" id="experience" style="height:auto;width: 100%;border-left: 4px solid grey;">
     <div class="heading" style="width: 30%;">
       <p class="text-center" style="font-weight: 400;font-size: 2rem;">Experience</p>
@@ -188,7 +188,7 @@
     </div>
     <div class="experiences" style="width: 68%;">
 
-      <!-- First -->
+      <!-- First --><!--
       <div class="exp-first p-4" style="width: 80%;height: auto;font-size: large;font-weight: 500;color: grey;
         box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;margin-left:5vw;">
         <p class="p-0 m-0">Software Engineering Intern</p>
@@ -196,7 +196,7 @@
         <span class="text-dark d-block" style="font-weight: 200;">Jan 2019 - August 2019</span>
       </div>
 
-      <!-- Second -->
+      <!-- Second --><!--
       <div class="exp-first p-4 " style="width: 80%;height: auto;font-size: large;font-weight: 500;color: grey;
       box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;margin: 30px 5vw;">
         <p class="p-0 m-0">Software Engineer</p>
@@ -233,7 +233,7 @@
 
     </div>
   </section>
-
+<!-- -->
   <!-- Projects -->
   <section class="projects d-flex" id="projects" style="background-color: #eaf2fa;height: auto;padding: 110px 10px;">
     <div class="heading" style="width: 30%;">
