--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
     </div>
     <div class="experiences" style="width: 68%;">
 
-      <!-- First --><!--
+      <!-- First --><!---
       <div class="exp-first p-4" style="width: 80%;height: auto;font-size: large;font-weight: 500;color: grey;
         box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;margin-left:5vw;">
         <p class="p-0 m-0">Software Engineering Intern</p>
@@ -232,8 +232,8 @@
       </div>
 
     </div>
-  </section>
-<!-- -->
+  </section>-->
+
   <!-- Projects -->
   <section class="projects d-flex" id="projects" style="background-color: #eaf2fa;height: auto;padding: 110px 10px;">
     <div class="heading" style="width: 30%;">
@@ -277,11 +277,11 @@
         <div class="content d-flex">
 
           <div class="info d-flex flex-column" style="width: 40%">
-            <a href="https://mi-website-clone.netlify.app/" class="p-0 m-0 d-block" target="_blank">MI Website Clone</a>
+            <a href="http://127.0.0.1:5500/public/index.html" class="p-0 m-0 d-block" target="_blank">Instagram Clone</a>
             <span class="text-dark" style="font-weight: 200;font-size: 0.9rem;">(Html, CSS, Bootstrap, JS)</span>
-            <span class="text-dark d-block mt-4" style="font-weight: 100;font-size: 0.8rem;">M Mohammed Saif
+            <span class="text-dark d-block mt-4" style="font-weight: 100;font-size: 0.8rem;">Aslam Asgar Khan
             </span>
-            <a href="https://github.com/saifmohammed888/campk12/tree/master/Web-development/Level%203/MI%20Clone"
+            <a href="https://github.com/iamaslamkhan/Instagram-clone"
               target="_blank" id="code"><button class="btn btn-sm my-2 bg-white"
                 style="width: 6vw;border: 1px solid #795548"><i class="fab fa-github" style="color: #795548"><span
                     class="mx-1">
@@ -289,7 +289,7 @@
           </div>
 
           <div class="image" style="width: 60%;">
-            <img src="images/mi.PNG" alt="" style="width: 100%;height:10vw;">
+            <img src="Instagram.PNG" alt="" style="width: 100%;height:10vw;">
           </div>
         </div>
       </div>
